# simple_noise_handshake

./: Cargo.toml  README.md  build.rs
src/: lib.rs
src/auth/: mod.rs
src/auth/noise/: cipher.rs  handshake_state.rs  mod.rs  protocol.rs  symmetric_state.rs
src/connection/: mod.rs  multistream.rs
src/kad/: mod.rs  node.rs  routing.rs
src/proto/: handshake.proto
src/utils/: mod.rs
tests/: identify_integration.rs  noise_handshake_integration.rs
