[package]
name = "ipfs_handshake"
version = "0.1.0"
edition = "2021"

[lib]
name = "ipfs_handshake"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = {version="0.50.0", features=["kad", "webrtc", "tokio", "tcp", "dns", "noise", "mplex", "yamux", "websocket", "ping", "identify"]}
uint = "0.9.5"
rand = {version="0.7.0", features=["std"]} # dalek depends on an older version 
sha2 = "0.10.6"
prost = "0.11"
bytes = "1.3.0"
tokio = {version = "1.23.0", features = ["rt-multi-thread", "macros"]}
protocol = {version = "3.4", features = ["derive"]}
protocol-derive = "3.4.0"
unsigned-varint = "0.7.1"
ed25519-dalek = "1.0.1"
x25519-dalek = "1.1.0" # to be compatible with chachapoly
chacha20poly1305 = "0.10.1"

hmac = "0.12.1"

[build-dependencies]
prost-build = {version = "0.11"}

#libp2p-webrtc = "0.3.0"
