[package]
name = "noise_handshake"
version = "0.1.0"
edition = "2021"

[lib]
name = "noise_handshake"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uint = "0.9.5"
rand = {version="0.7.0", features=["std"]} # dalek depends on an older version 
sha2 = "0.10.6"
prost = "0.11"
bytes = "1.3.0"
tokio = {version = "1.23.0", features = ["rt-multi-thread", "macros"]}
unsigned-varint = {version = "0.7.1", features = ["std"]}
ed25519-dalek = "1.0.1"
x25519-dalek = "1.1.0" # Version matched with ChaChaPoly for rand crate
chacha20poly1305 = "0.10.1"
hmac = {version="0.12.1", features=["reset"]}
thiserror = "1.0.38"

[build-dependencies]
prost-build = {version = "0.11"}

